# lane_lines

./: .gitignore  Dockerfile  GIT_HELP_FOR_DANIEL.md  Notes.md  ProjectProposal.md  README.md  Timeline.md  VNC_instructions.md  final_paper.tex
ICNet-tensorflow-master/: demo.ipynb  demo.py  evaluate.py  model.py  network.py  train.py
ICNet-tensorflow-master/utils/: config.py  image_reader.py  visualize.py
LaneNet/: LaneNet_steps.md
LaneNet/config/: global_config.py
LaneNet/data_provider/: data_processor.py  lanenet_data_processor.py
LaneNet/lanenet_model/: lanenet_discriminative_loss.py
LaneNet/tools/: test_lanenet.py  test_lanenet_postprocess.py  train_lanenet.py
Scripts/: CULane_Convert_LaneNet.ipynb  CULane_Convert_LaneNet.py  CULane_Gray_2_RGB.ipynb  CULane_Gray_2_RGB.py  CULane_Mean.py  CULane_Remake.ipynb  CULane_Remake.py  CULane_remake_reformat_instructions.md  Combine_Image_Dir_To_Video.ipynb  Combine_Image_Dir_To_Video.py  Postprocess_Testing.ipynb  Postprocess_Testing.py  Save_Picture.ipynb  Save_Picture.py  benchmark.py  culane remake instructions.txt  gather.py  hdbscantesting.py  hough_example_output_noise4.txt  performance_and_scalability.py  video_main.cpp
Scripts/.ipynb_checkpoints/: CULane_Convert_LaneNet-checkpoint.ipynb  CULane_Gray_2_RGB-checkpoint.ipynb  CULane_Mean-checkpoint.ipynb  CULane_Remake-checkpoint.ipynb  Combine_Image_Dir_To_Video-checkpoint.ipynb  Save_Picture-checkpoint.ipynb
Scripts/thresholdProcessing/: finalTraditionalCluster.py  test.py  traditionalCluster.py
data/CULane/: test0_normal.txt  test1_crowd.txt  test2_hlight.txt  test3_shadow.txt  test4_noline.txt  test5_arrow.txt  test6_curve.txt  test7_cross.txt  test8_night.txt
eec193_lab1/: AUTHORS  README.html  README.md  udacity_parameters.yaml
eec193_lab1/camera_calibration/: CMakeLists.txt
eec193_lab1/docker/: Dockerfile
eec193_lab1/lane_line_detection/: CMakeLists.txt
eec193_lab1/sandbox/: CMakeLists.txt
lab1/lab1_2D_RoC/: README.md
lab1/lab1_Victoria/: fisheye_parameters.yaml
lab1/lab1_merged/camera_calibration/: CMakeLists.txt
lab1/lab1_merged/camera_calibration/code/: test_fisheye.bash
lab1/lab1_merged/camera_calibration/include/: overloader.hpp
lab_1_ref/: README.html
lab_1_ref/lane_line_detection/: CMakeLists.txt
lab_1_ref/lane_line_detection/code/: run_image_main.bash  run_video_main.bash
lab_1_ref/lane_line_detection/include/: lane_line.hpp
lab_1_ref/lane_line_detection/src/: thresholds.cpp  video_main.cpp  window_search_tester.cpp
lab_1_ref/sandbox/: CMakeLists.txt
lane_lines_papers_notes/: lane_lines_papers_notes.txt
(+407 files in other folders)
